--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.19",
+        "axios": "^0.19.2",
         "bootstrap": "^4.0.0",
         "cross-env": "^7.0",
         "jquery": "^3.2",
@@ -27,6 +27,7 @@
         "run": "^1.4.0",
         "vue-router": "^3.4.9",
         "vuetify": "^2.3.18",
+        "vuex": "^3.5.1",
         "watch": "^1.0.2"
     }
 }
