--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "vue-router": "^3.4.9",
         "vuetify": "^2.3.18",
         "vuex": "^3.5.1",
+        "vuex-persist": "^3.1.3",
         "watch": "^1.0.2"
     }
 }
